--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,9 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+axum = "0.8.3"
+chrono = "0.4.40"
+fasteval = "0.2.4"
+rmcp = { version = "0.1.5", features = ["transport-sse-server", "transport-io"] }
+serde = { version = "1.0.219", features = ["derive"] }
+tokio = { version = "1.44.2", features = ["full"] }
